bitwarden/deployment.yaml
---
# Source: bitwarden-k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-bitwarden-k8s
  labels:
    app.kubernetes.io/name: bitwarden-k8s
    helm.sh/chart: bitwarden-k8s-0.1.3
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-k8s
      app.kubernetes.io/instance: bitwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-k8s
        app.kubernetes.io/instance: bitwarden
      annotations:
    spec:
      containers:
        - name: bitwarden-k8s
          image: "bitwardenrs/server:1.17.0"
          imagePullPolicy: IfNotPresent
          resources: {}
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: data
              mountPath: /data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden-ssd
